<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/profile_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <FrameLayout
                        android:id="@+id/profile_image_layout"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp">

                        <ProgressBar
                            android:id="@+id/profile_level_progress"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:indeterminate="false"
                            android:progressDrawable="@drawable/profile_progress"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:max="100"
                            android:progress="0"/>

                        <com.mikepenz.iconics.view.IconicsImageView
                            android:id="@+id/profile_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/grey_circle"
                            app:iiv_size="100dp"
                            app:iiv_color="@color/md_white_1000"
                            app:iiv_icon="gmd-account-circle"/>

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/profile_image"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"/>

                    </FrameLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_toRightOf="@+id/profile_image_layout">

                        <com.blakit.petrenko.habits.view.FontTextView
                            android:id="@+id/profile_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="15dp"
                            style="@style/SettingsTheme.PrimaryText.Font"
                            android:text="@string/profile_name_unknown"/>

                        <com.blakit.petrenko.habits.view.FontTextView
                            android:id="@+id/profile_level"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="0dp"
                            style="@style/SettingsTheme.SecondaryText.Font"
                            android:text="@string/profile_level"/>

                        <com.blakit.petrenko.habits.view.FontTextView
                            android:id="@+id/profile_status"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/SettingsTheme.SecondaryText.Font"
                            android:text="@string/profile_status"/>

                        <com.blakit.petrenko.habits.view.FontTextView
                            android:id="@+id/profile_google_account"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/SettingsTheme.SecondaryText.Font"
                            android:text="@string/profile_google_account"/>

                    </LinearLayout>

                </RelativeLayout>

                <com.blakit.petrenko.habits.view.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SettingsTheme.Header.Font"
                    android:text="@string/profile_statistics_header"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/md_grey_400"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"/>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.blakit.petrenko.habits.view.FontTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/SettingsTheme.PrimaryText.Font"
                            android:text="@string/profile_statistics_habits"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="10dp">

                            <com.mikepenz.iconics.view.IconicsImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_margin="5dp"
                                app:iiv_color="@color/md_green_A400"
                                app:iiv_icon="gmd-fiber-manual-record"
                                app:iiv_size="10dp"/>

                            <com.blakit.petrenko.habits.view.FontTextView
                                android:id="@+id/profile_statistics_habits_complete"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/md_grey_600"
                                android:text="@string/profile_statistics_habits_complete"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <com.mikepenz.iconics.view.IconicsImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:layout_gravity="center_vertical"
                                app:iiv_color="@color/md_amber_300"
                                app:iiv_icon="gmd-fiber-manual-record"
                                app:iiv_size="10dp"/>

                            <com.blakit.petrenko.habits.view.FontTextView
                                android:id="@+id/profile_statistics_habits_performed"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/md_grey_600"
                                android:text="@string/profile_statistics_habits_performed"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <com.mikepenz.iconics.view.IconicsImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:layout_gravity="center_vertical"
                                app:iiv_color="@color/md_red_400"
                                app:iiv_icon="gmd-fiber-manual-record"
                                app:iiv_size="10dp"/>

                            <com.blakit.petrenko.habits.view.FontTextView
                                android:id="@+id/profile_statistics_habits_zero_progress"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/md_grey_600"
                                android:text="@string/profile_statistics_habits_zero_progress"/>

                        </LinearLayout>

                    </LinearLayout>

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/profile_statistics_chart"
                        android:layout_width="170dp"
                        android:layout_height="170dp"
                        android:layout_marginTop="10dp"
                        android:layout_alignParentRight="true"/>

                </RelativeLayout>



                <com.blakit.petrenko.habits.view.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SettingsTheme.Header.Font"
                    android:text="@string/profile_settings_header"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/md_grey_400"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                    <com.blakit.petrenko.habits.view.FontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/SettingsTheme.PrimaryText.Font"
                        android:text="@string/profile_settings_change_nick"/>

                    <com.blakit.petrenko.habits.view.FontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="0dp"
                        style="@style/SettingsTheme.SecondaryText.Font"
                        android:text="@string/profile_settings_change_nick_description"/>

                    <RelativeLayout
                        android:id="@+id/profile_settings_nick_back"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#fff3e0"
                        android:clickable="true"
                        android:paddingTop="5dp"
                        android:paddingBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp">

                        <com.blakit.petrenko.habits.view.FontTextView
                            android:id="@+id/profile_settings_nickname"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/AddDetailsTheme.Small.Font"
                            android:text="@string/profile_settings_nick_non_set"
                            android:layout_margin="10dp"
                            android:layout_marginTop="15dp"
                            android:layout_centerInParent="true"/>

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>


</LinearLayout>
